cluster/harbor/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: harbor-route
  namespace: harbor
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cr.nathanv.app`) && Method(`GET`) && PathRegexp(`^/v2/.+/blobs/[^/]+:[^/]+$`)
      kind: Rule
      priority: 1000
      services:
        - name: harbor
          port: 80
      middlewares:
        - name: cdn-cache
          namespace: traefik
    - match: Host(`cr.nathanv.app`)
      kind: Rule
      services:
        - name: harbor
          port: 80
  tls:
    certResolver: le
    domains:
      - sans:
          - "*.nathanv.app"
